- Exchanged codesend binary with updated version - Modified index.js to accept the configuration parameter for 'protocol' - Updated sample-config.json accordingly

--- a/sample-config.json
+++ b/sample-config.json
@@ -20,6 +20,6 @@
         "rf_on": 4480259,
         "rf_off": 4480268,
         "pulselength": "",
-        "pin": ""
+        "protocol": "" 
     }]
 }
